fix bottom button alignment issue

--- a/styles/addPackage.css
+++ b/styles/addPackage.css
@@ -49,7 +49,7 @@ h4 {
     padding: 0;
     border: none;
     background: none;
-    left: 35%;
+    left: 50%;
     position: relative;
     margin: auto;
 }
@@ -59,7 +59,7 @@ h4 {
     padding: 0;
     border: none;
     background: none;
-    left: 17.5%;
+    left: 25%;
     position: relative;
     margin: auto;
 }
